--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
 html, body{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: larger;
-    background: url("https://www.toptal.com/designers/subtlepatterns/patterns/white_wall2.png");
+    background-color: #ff7256;
 }
 .quiz, .scoreContainer, .highScorePage{
     display: none;
 }
 
+h1{
+    margin-top: 15%;
+    
+
+}
+
 .card {
-    margin-top: 7% !important;
-    background: url("https://www.toptal.com/designers/subtlepatterns/patterns/white_wall2.png");
+    margin-top: 50% !important;
+    background: #ff8e77;
+    color: whitesmoke;
+    font: ;
 }
 
 li:hover {
