--- a/style.css
+++ b/style.css
@@ -13,3 +13,20 @@
   text-transform: lowercase;
   letter-spacing: 2px;
 }
+
+#start-btn{
+  background-color: transparent;
+  color:#313566;
+  border: none;
+  outline: none;
+  font-family: 'Raleway', sans-serif;
+  text-transform: lowercase;
+  letter-spacing: 2px;
+  border-radius: 25px;
+  position: absolute;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  top: 300px;
+  font-size: 50px;
+}
