--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   color:#313566;
   border: none;
   outline: none;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Poppins', sans-serif;
   text-transform: lowercase;
   letter-spacing: 2px;
   border-radius: 25px;
