--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
   border: none;
   outline: none;
   font-family: 'Poppins', sans-serif;
+  font-weight: 900;
   text-transform: lowercase;
   letter-spacing: 2px;
   border-radius: 25px;
