updated font color

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 #start-btn{
   background-color: transparent;
-  color:#313566;
+  color:#ff048f;
   border: none;
   outline: none;
   font-family: 'Poppins', sans-serif;
